--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 flask>=3.1.1
-numpy>=1.21.0,<2.0.0
-opencv-python>=4.11.0.86
+numpy==1.23.5
+opencv-python==4.8.1.78
 psycopg2-binary>=2.9.10
 scikit-learn>=1.7.0
-tensorflow>=2.13.0
+tensorflow==2.11.0
 werkzeug>=3.1.3
 python-dotenv>=1.0.0
+matplotlib==3.7.1
