--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,11 @@ services:
   - type: web
     name: plant-disease-detector
     env: python
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip setuptools
+      pip install --upgrade --force-reinstall setuptools
+      pip cache purge
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: FLASK_ENV
