--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools >= 70.0"]
+requires = ["setuptools >= 70.0", "wheel"]
 build-backend = "setuptools.build_meta"
