--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,7 @@ services:
     name: plant-disease-detector
     env: python
     buildCommand: |
-      pip install --upgrade pip setuptools
-      pip install --upgrade --force-reinstall setuptools
-      pip cache purge
+      pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
