--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     buildCommand: |
       pip install --upgrade pip
-      pip install -r requirements.txt
+      pip install --no-build-isolation -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: FLASK_ENV
