--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: group43-final-project
+    name: plant-disease-detection
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"
     startCommand: "gunicorn app:app --bind 0.0.0.0:10000"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10
+        value: 3.10.11
