--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: plant-detection-flask
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app -c gunicorn_config.py
     envVars:
       - key: SESSION_SECRET
         sync: false
